// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component should render correctly with bottom labelPosition 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 1.6rem 0;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked ~ .c5 {
  border-color: #3872D2;
  background-color: #3872D2;
}

.c4:checked ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:checked ~ .c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked) ~ .c5 {
  background-color: transparent;
  border-color: #13181D;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c4:not(:disabled):focus:not(:checked) ~ .c5 {
  border-color: #3872D2;
}

.c3 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c0 * {
  cursor: pointer;
}

.c0.c0.c0:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c0.c0.c0:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #3061B3;
}

<div>
  
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    sizes="[object Object]"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      type="checkbox"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        sizes="[object Object]"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked false and active state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked ~ .c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:checked ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:checked ~ .c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked) ~ .c5 {
  background-color: transparent;
  border-color: #D73A43;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c4:not(:disabled):focus:not(:checked) ~ .c5 {
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #D73A43;
  margin-bottom: 0.5rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: pointer;
}

.c2.c2.c2:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c2.c2.c2:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
  border-color: #3061B3;
}

<div>
  <span
    class="c0 c1"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c3"
    >
      <input
        class="c4"
        id=""
        sizes="[object Object]"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked false and disabled state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked ~ .c5 {
  border-color: #dfe4e9;
  background-color: #dfe4e9;
}

.c4:checked ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:checked ~ .c5 .c7 * {
  fill: #98A7B7;
}

.c4:not(:checked) ~ .c5 {
  background-color: transparent;
  border-color: #98A7B7;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c4:not(:disabled):focus:not(:checked) ~ .c5 {
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #98A7B7;
  margin-bottom: 0.5rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: not-allowed;
}

<div>
  <span
    class="c0 c1"
    disabled=""
  >
    Something went wrong
  </span>
  <label
    class="c2"
    disabled=""
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c3"
    >
      <input
        class="c4"
        disabled=""
        id=""
        sizes="[object Object]"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked false and hasError state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked ~ .c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:checked ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:checked ~ .c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked) ~ .c5 {
  background-color: transparent;
  border-color: #D73A43;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c4:not(:disabled):focus:not(:checked) ~ .c5 {
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #D73A43;
  margin-bottom: 0.5rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: pointer;
}

.c2.c2.c2:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c2.c2.c2:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
  border-color: #3061B3;
}

<div>
  <span
    class="c0 c1"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c3"
    >
      <input
        class="c4"
        id=""
        sizes="[object Object]"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked false and indeterminate state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked ~ .c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:checked ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:checked ~ .c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked) ~ .c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:not(:checked) ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:not(:checked) ~ .c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #D73A43;
  margin-bottom: 0.5rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: pointer;
}

.c2.c2.c2:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #B73139;
  background-color: #B73139;
}

.c2.c2.c2:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
  border-color: #97292F;
  background-color: #97292F;
}

<div>
  <span
    class="c0 c1"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c3"
    >
      <input
        class="c4"
        id=""
        sizes="[object Object]"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 11h10c.55 0 1 .45 1 1s-.45 1-1 1H7c-.55 0-1-.45-1-1s.45-1 1-1z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked true and active state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked ~ .c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:checked ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:checked ~ .c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked) ~ .c5 {
  background-color: transparent;
  border-color: #D73A43;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c4:not(:disabled):focus:not(:checked) ~ .c5 {
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #D73A43;
  margin-bottom: 0.5rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: pointer;
}

.c2.c2.c2:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #B73139;
  background-color: #B73139;
}

.c2.c2.c2:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
  border-color: #97292F;
  background-color: #97292F;
}

<div>
  <span
    class="c0 c1"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c3"
    >
      <input
        checked=""
        class="c4"
        id=""
        sizes="[object Object]"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked true and disabled state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked ~ .c5 {
  border-color: #dfe4e9;
  background-color: #dfe4e9;
}

.c4:checked ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:checked ~ .c5 .c7 * {
  fill: #98A7B7;
}

.c4:not(:checked) ~ .c5 {
  background-color: transparent;
  border-color: #98A7B7;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c4:not(:disabled):focus:not(:checked) ~ .c5 {
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #98A7B7;
  margin-bottom: 0.5rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: not-allowed;
}

<div>
  <span
    class="c0 c1"
    disabled=""
  >
    Something went wrong
  </span>
  <label
    class="c2"
    disabled=""
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c3"
    >
      <input
        checked=""
        class="c4"
        disabled=""
        id=""
        sizes="[object Object]"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked true and hasError state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked ~ .c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:checked ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:checked ~ .c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked) ~ .c5 {
  background-color: transparent;
  border-color: #D73A43;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c4:not(:disabled):focus:not(:checked) ~ .c5 {
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #D73A43;
  margin-bottom: 0.5rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: pointer;
}

.c2.c2.c2:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #B73139;
  background-color: #B73139;
}

.c2.c2.c2:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
  border-color: #97292F;
  background-color: #97292F;
}

<div>
  <span
    class="c0 c1"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c3"
    >
      <input
        checked=""
        class="c4"
        id=""
        sizes="[object Object]"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with checked true and indeterminate state 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked ~ .c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:checked ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:checked ~ .c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked) ~ .c5 {
  border-color: #D73A43;
  background-color: #D73A43;
}

.c4:not(:checked) ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:not(:checked) ~ .c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #D73A43;
}

.c3 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c1 {
  display: block;
  font-size: 1.2rem;
  line-height: 1.6rem;
  color: #D73A43;
  margin-bottom: 0.5rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c2 * {
  cursor: pointer;
}

.c2.c2.c2:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
  border-color: #B73139;
  background-color: #B73139;
}

.c2.c2.c2:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
  border-color: #97292F;
  background-color: #97292F;
}

<div>
  <span
    class="c0 c1"
  >
    Something went wrong
  </span>
  <label
    class="c2"
    for=""
    id="-wrapper"
    sizes="[object Object]"
  >
    
    <div
      class="c3"
    >
      <input
        checked=""
        class="c4"
        id=""
        sizes="[object Object]"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 11h10c.55 0 1 .45 1 1s-.45 1-1 1H7c-.55 0-1-.45-1-1s.45-1 1-1z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with left labelPosition 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked ~ .c5 {
  border-color: #3872D2;
  background-color: #3872D2;
}

.c4:checked ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:checked ~ .c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked) ~ .c5 {
  background-color: transparent;
  border-color: #13181D;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c4:not(:disabled):focus:not(:checked) ~ .c5 {
  border-color: #3872D2;
}

.c3 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 * {
  cursor: pointer;
}

.c0.c0.c0:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c0.c0.c0:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #3061B3;
}

<div>
  
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    sizes="[object Object]"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      type="checkbox"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        sizes="[object Object]"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with right labelPosition 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked ~ .c5 {
  border-color: #3872D2;
  background-color: #3872D2;
}

.c4:checked ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:checked ~ .c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked) ~ .c5 {
  background-color: transparent;
  border-color: #13181D;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c4:not(:disabled):focus:not(:checked) ~ .c5 {
  border-color: #3872D2;
}

.c3 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 * {
  cursor: pointer;
}

.c0.c0.c0:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c0.c0.c0:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #3061B3;
}

<div>
  
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    sizes="[object Object]"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      type="checkbox"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        sizes="[object Object]"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox component should render correctly with top labelPosition 1`] = `
.c8 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 1.6rem 0;
}

.c6 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c7 {
  pointer-events: none;
  z-index: 1;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c4 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c4:checked ~ .c5 {
  border-color: #3872D2;
  background-color: #3872D2;
}

.c4:checked ~ .c5 .c7 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c4:checked ~ .c5 .c7 * {
  fill: #ffffff;
}

.c4:not(:checked) ~ .c5 {
  background-color: transparent;
  border-color: #13181D;
}

.c4:not(:disabled):focus ~ .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c4:not(:disabled):focus:not(:checked) ~ .c5 {
  border-color: #3872D2;
}

.c3 {
  margin: 0.3rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 * {
  cursor: pointer;
}

.c0.c0.c0:hover .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c0.c0.c0:active .c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #3061B3;
}

<div>
  
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    sizes="[object Object]"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      type="checkbox"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        sizes="[object Object]"
        type="checkbox"
      />
      <div
        class="c5 c6"
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
            fill="green"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
